--- a/react-basic-pro/package.json
+++ b/react-basic-pro/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "serve": "json-server --watch db.json --port 3002"
   },
   "eslintConfig": {
     "extends": [
